# rectifier

./: CMakeLists.txt  README.md  qdockresizeeventfilter.cpp  qdockresizeeventfilter.h
main/: main.cpp
src/: qdockresizeeventfilter.h  qfluidgridlayout.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/res/: res.qrc
